Lots of progress. Added pictures, top nav is now ontop of everything and fixed, added text to top nav, alligned paragraph to center and supports overflow + justified, improved layout.

--- a/style.sass
+++ b/style.sass
@@ -1,40 +1,84 @@
 body
+  font-family: 'Sans-Open', sans-serif
   background: lightgray
+  font-size: 1.5em
+  color: #414141
   margin: 0
-  nav
-    display: flex
-    font-family: 'Sans-Open', sans-serif
-    width: auto
-    font-size: 3em
-    color: red
-    background-color: black
-    z-index: 1
-
-  h1
-    font-family: 'Sans-Open', sans-serif
-    width: auto
-    margin-top: -40px
-    align-content: center
-    text-align: center
-    font-size: 3em
-    color: #FFF
-    text-transform: uppercase
-    z-index: 1
   header
-    img
-      padding: 0
+    nav
+      background: url('images/topbar2.svg')
+      position: fixed
       margin: 0
-      width: 2500px
+      margin-top: -500px
+      padding: 0
+      padding-bottom: 300px
+      font-size: 1.2em
+      color: red
+      height: 560px
+      width: 2400px
+      background-size: cover
+      background-repeat: no-repeat
+      //background-color: black
+      //display: block
+      .container
+        margin-top: 500px
+        ul
+          list-style-type: none
+          li
+            padding: .3em
+          li a
+            padding: .4em
+            color: white
+            text-decoration: none
+            &:hover
+              color: red
+
+    img
+      display: none
+      //padding: 0px
+      //margin: 0px
+      //width: 199px
+      //float: left
     //background-image: url(http://www.rd.com/wp-content/uploads/sites/2/2016/04/01-cat-wants-to-tell-you-laptop.jpg)
-    margin: 0px
-    padding: 0
-    background-size: cover
-    background-repeat: no-repeat
+    //margin: 0px
+    //background-size: cover
+    //background-repeat: no-repeat
     //color: red
     //background: black
+  .container2
+    padding-top: 300px
+    h1
+      width: auto
+      align-content: center
+      text-align: center
+      font-size: 2.5em
+      text-transform: uppercase
+
+    img
+      width: 20%
+      height: auto
+      display: block
+      border-radius: 50%
+      margin-left: auto
+      margin-right: auto
+      align-content: center
+      padding: 0 0 10px 0
+    ul
+      list-style-type: none
+      margin-left: auto
+      margin-right: auto
+      width: 300px
+      text-align: center
+    p
+      text-align: justify
+      line-height: 1.3
+      width: auto
+      margin: 0 200 0 200
 
   @media screen and (max-width: 500px)
     background-color: red
     h1
       font-size: 2em
       padding-top: 50px
+    p
+      font-size: 1em
